# forgekit

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONVENTIONS.md  IMPLEMENTATION_PLAN.md  NEXT_SESSION_PROMPT_2026-02-11_1929.md  PRD.md  README.md  SESSION_SUMMARY_2026-02-11_1929.md  pyproject.toml
.github/workflows/: ci.yml
commands/: session-end.md  session-start.md  verify-session.md
docs/blueprints/: 2026-02-02_0900_finding_skill_implementation.md  2026-02-11_1856_dev_environment_setup.md
docs/design/: 2026-02-02_0830_audit_pipeline_and_finding_skill.md  2026-02-11_1848_dev_environment_strategy.md
docs/findings/: 2026-02-02_0800_taxonomy_gap_proactive_findings.md  2026-02-11_1837_dev_environment_infrastructure_FINDINGS_TRACKER.md  2026-02-11_1837_missing_dev_environment_infrastructure.md
docs/plans/: 2026-02-11_2137_dev_environment_setup.md
docs/prompts/: 2026-02-02_0900_finding_skill_implementation.md  2026-02-11_1856_dev_environment_setup.md
docs/research/: 2026-01-23_0615_systems_analyst_skill_design.md  2026-01-26_1410_skills_integration_architecture.md  2026-01-26_1549_forgekit_monetization_and_distribution_strategy.md  2026-02-02_0725_taxonomy_gap_proactive_findings.md
skills/analyze/: DESIGN_SKILL_SPEC.md  SKILL.md
skills/blueprint/: SKILL.md
skills/design/: SKILL.md
skills/finding/: SKILL.md
skills/incident/: SKILL.md
skills/investigate/: SKILL.md
skills/rca-bugfix/: SKILL.md
skills/research/: SKILL.md
skills/watchdog/: SKILL.md
src/forgekit/: __init__.py  cli.py
tests/: test_cli.py
